force-app/main/default/objects/Application__c/fields/Grant_Admin_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_First_Name__c</fullName>
    <label>Grant Admin First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>