force-app/main/default/objects/Application__c/fields/Grant_Admin_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Mobile__c</fullName>
    <label>Grant Admin Mobile</label>
    <type>Phone</type>
</CustomField>