force-app/main/default/objects/Application__c/fields/Grant_Admin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Phone__c</fullName>
    <label>Grant Admin Phone</label>
    <type>Phone</type>
</CustomField>