force-app/main/default/objects/Application__c/fields/Grant_Admin_Role__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Role__c</fullName>
    <label>Grant Admin Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>