force-app/main/default/objects/Application__c/fields/Grant_Admin_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Suffix__c</fullName>
    <label>Grant Admin Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>