force-app/main/default/objects/Application__c/fields/Grant_Admin_Title__c.field-meta.xml
<CustomField>
    <fullName>Grant_Admin_Title__c</fullName>
    <label>Grant Admin Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>