force-app/main/default/objects/Application__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <formula
  >IF(CONTAINS(RecordType.Name, &apos;GREAT&apos;), &quot;I&apos;m GREAT&quot;,
IF(CONTAINS(RecordType.Name, &apos;Baseball&apos;), &apos;Badges for Baseball&apos;, 
IF(CONTAINS(RecordType.Name, &apos;Special Initiative&apos;), &apos;Special Initiative&apos;,
IF(CONTAINS(RecordType.Name, &apos;Healthy Lifestyles&apos;), &apos;Healthy Lifestyles&apos;,
IF(CONTAINS(RecordType.Name, &apos;TRAIL&apos;), &apos;TRAIL&apos;,
IF(CONTAINS(RecordType.Name, &apos;OVC&apos;), &apos;OVC&apos;,
IF(CONTAINS(RecordType.Name, &apos;SOI&apos;), &apos;SOI&apos;,
&apos;&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Type</label>
    <type>Text</type>
</CustomField>