force-app/main/default/objects/Application__c/fields/Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year__c</fullName>
    <label>Grant Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_Options</valueSetName>
    </valueSet>
</CustomField>