force-app/main/default/objects/Application__c/fields/Has_Competencies__c.field-meta.xml
<CustomField>
    <fullName>Has_Competencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Competencies</label>
    <type>Checkbox</type>
</CustomField>