force-app/main/default/objects/Application__c/fields/Has_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Has_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Implementation</label>
    <type>Checkbox</type>
</CustomField>