force-app/main/default/objects/Application__c/fields/Has_Participation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Has_Participation_Fee__c</fullName>
    <label>Has Participation Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>