force-app/main/default/objects/Application__c/fields/Has_Strategic_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Strategic_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Strategic Plan</label>
    <type>Checkbox</type>
</CustomField>