force-app/main/default/objects/Application__c/fields/Healthy_Choices_Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Choices_Implementation_Plan__c</fullName>
    <label>Healthy Choices Implementation Plan</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>