force-app/main/default/objects/Application__c/fields/How_Existing_Members_Recruited__c.field-meta.xml
<CustomField>
    <fullName>How_Existing_Members_Recruited__c</fullName>
    <label>How Existing Members Recruited</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>