force-app/main/default/objects/Application__c/fields/How_Existing_Members_Recruited_Notes__c.field-meta.xml
<CustomField>
    <fullName>How_Existing_Members_Recruited_Notes__c</fullName>
    <label>How Existing Members Recruited Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>