force-app/main/default/objects/Application__c/fields/How_Existing_Members_Recruited_Score_2__c.field-meta.xml
<CustomField>
    <fullName>How_Existing_Members_Recruited_Score_2__c</fullName>
    <label>How Existing Members Recruited Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>