force-app/main/default/objects/Application__c/fields/How_Funds_Utilized_Comments__c.field-meta.xml
<CustomField>
    <fullName>How_Funds_Utilized_Comments__c</fullName>
    <label>How Funds Utilized Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>