force-app/main/default/objects/Application__c/fields/How_Funds_Utilized_Score__c.field-meta.xml
<CustomField>
    <fullName>How_Funds_Utilized_Score__c</fullName>
    <label>How Funds Utilized Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>