force-app/main/default/objects/Application__c/fields/How_Many_LGBTQ_Youth__c.field-meta.xml
<CustomField>
    <fullName>How_Many_LGBTQ_Youth__c</fullName>
    <label>How Many LGBTQ Youth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>