force-app/main/default/objects/Application__c/fields/How_Program_will_be_delivered__c.field-meta.xml
<CustomField>
    <fullName>How_Program_will_be_delivered__c</fullName>
    <inlineHelpText
  >Explain your organization or staff leadership experience in delivering proven or promising opportunities to the target population.</inlineHelpText>
    <label>How Program will be delivered</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>