force-app/main/default/objects/Application__c/fields/How_Program_will_be_Delivered_Comments__c.field-meta.xml
<CustomField>
    <fullName>How_Program_will_be_Delivered_Comments__c</fullName>
    <label>How Program will be Delivered Comments</label>
    <type>TextArea</type>
</CustomField>