force-app/main/default/objects/Application__c/fields/How_Proposal_is_Different__c.field-meta.xml
<CustomField>
    <fullName>How_Proposal_is_Different__c</fullName>
    <label>How Proposal is Different</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>