force-app/main/default/objects/Application__c/fields/How_Story_will_be_Amplified__c.field-meta.xml
<CustomField>
    <fullName>How_Story_will_be_Amplified__c</fullName>
    <inlineHelpText
  >What story will be amplified if awarded this grant? How would funds help you to tell your story to others?</inlineHelpText>
    <label>How Story will be Amplified</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>