force-app/main/default/objects/Application__c/fields/How_Story_will_be_Amplified_Comments__c.field-meta.xml
<CustomField>
    <fullName>How_Story_will_be_Amplified_Comments__c</fullName>
    <label>How Story will be Amplified Comments</label>
    <type>TextArea</type>
</CustomField>