force-app/main/default/objects/Application__c/fields/How_Story_will_be_Amplified_Score__c.field-meta.xml
<CustomField>
    <fullName>How_Story_will_be_Amplified_Score__c</fullName>
    <label>How Story will be Amplified Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>