force-app/main/default/objects/Application__c/fields/How_Youth_in_Community_Informed__c.field-meta.xml
<CustomField>
    <fullName>How_Youth_in_Community_Informed__c</fullName>
    <label>How Youth in Community Informed</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>