force-app/main/default/objects/Application__c/fields/How_Youth_in_Community_Informed_Notes__c.field-meta.xml
<CustomField>
    <fullName>How_Youth_in_Community_Informed_Notes__c</fullName>
    <label>How Youth in Community Informed Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>