force-app/main/default/objects/Application__c/fields/How_Youth_in_Community_Informed_Score_2__c.field-meta.xml
<CustomField>
    <fullName>How_Youth_in_Community_Informed_Score_2__c</fullName>
    <label>How Youth in Community Informed Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>