force-app/main/default/objects/Application__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>