force-app/main/default/objects/Application__c/fields/Indirect_Costs_Budget__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Costs_Budget__c</fullName>
    <label>Indirect Costs Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>