force-app/main/default/objects/Application__c/fields/Indirect_Costs_Description__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Costs_Description__c</fullName>
    <label>Indirect Costs Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>