force-app/main/default/objects/Application__c/fields/Individuals_Directly_Impacted_by_Grant__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Directly_Impacted_by_Grant__c</fullName>
    <label>Individuals Directly Impacted by Grant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>&gt;250</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>