force-app/main/default/objects/Application__c/fields/Is_Organization_501_c3__c.field-meta.xml
<CustomField>
    <fullName>Is_Organization_501_c3__c</fullName>
    <label>Is Organization 501 c3?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>