force-app/main/default/objects/Application__c/fields/Is_Statement_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Is_Statement_of_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Statement of Interest</label>
    <type>Checkbox</type>
</CustomField>