force-app/main/default/objects/Application__c/fields/Justice_Team__c.field-meta.xml
<CustomField>
    <fullName>Justice_Team__c</fullName>
    <label>Justice Team</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>