force-app/main/default/objects/Application__c/fields/LGBTQ_Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>LGBTQ_Youth_Served__c</fullName>
    <label>LGBTQ Youth Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>