force-app/main/default/objects/Application__c/fields/Link_to_Application__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Application__c</fullName>
    <formula>IF(RecordType.Name == &apos;UA Freedom&apos;,
&quot;http://firstpicinc.secure.force.com/UAFreedomGrantApplication?appId=&quot;+Id,
IF(RecordType.Name == &apos;NCAI - SOI&apos;,
&quot;http://firstpicinc.secure.force.com/NCAIStatementOfInterest?appId=&quot;+Id,
IF(RecordType.Name == &apos;NCAI - TRAIL&apos;,
&quot;http://firstpicinc.secure.force.com/TRAILApplication?appId=&quot;+Id,
&quot;http://firstpicinc.secure.force.com/&quot;+ FirstPic_National_Org_Code__c +&quot;Application?appId=&quot;+Id
)))</formula>
    <label>Link to Application</label>
    <type>Text</type>
</CustomField>