force-app/main/default/objects/Application__c/fields/Mailing_Address_Same_as_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Same_as_Physical_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address Same as Physical Address</label>
    <type>Checkbox</type>
</CustomField>