force-app/main/default/objects/Application__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>