force-app/main/default/objects/Application__c/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <label>Mailing Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>