force-app/main/default/objects/Application__c/fields/Majority_of_Budget__c.field-meta.xml
<CustomField>
    <fullName>Majority_of_Budget__c</fullName>
    <label>Majority of Budget</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>