force-app/main/default/objects/Application__c/fields/Management_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Management_Procurement__c</fullName>
    <label>Management_Procurement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>