force-app/main/default/objects/Application__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>