force-app/main/default/objects/Application__c/fields/Names_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Names_of_Sites__c</fullName>
    <label>Names of Sites</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>