force-app/main/default/objects/Application__c/fields/Narrative_of_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Narrative_of_Outcomes__c</fullName>
    <inlineHelpText
  >Please provide a brief narrative that explains the anticipated outcomes of the project – specifically, what does success look like and how will you achieve it?</inlineHelpText>
    <label>Narrative of Outcomes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>