force-app/main/default/objects/Application__c/fields/National_Organization__c.field-meta.xml
<CustomField>
    <fullName>National_Organization__c</fullName>
    <label>National Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (National Organization)</relationshipLabel>
    <relationshipName>NationalApplications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>