force-app/main/default/objects/Application__c/fields/National_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Id__c</fullName>
    <label>National Organization Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>