force-app/main/default/objects/Application__c/fields/National_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Name__c</fullName>
    <formula>National_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Organization Name</label>
    <type>Text</type>
</CustomField>