force-app/main/default/objects/Application__c/fields/Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment__c</fullName>
    <label>Needs Assessment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>