force-app/main/default/objects/Application__c/fields/No_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>No_DUNS_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Used in OVC SOI so org can submit prior to receiving DUNS number.</description>
    <label>No DUNS Number</label>
    <type>Checkbox</type>
</CustomField>