force-app/main/default/objects/Application__c/fields/Number_of_People_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_Impacted__c</fullName>
    <inlineHelpText
  >Deprecated: Replaced by Individuals Directly Impacted by Grant</inlineHelpText>
    <label>Number of People Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>