force-app/main/default/objects/Application__c/fields/Number_of_Staff_Instructors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff_Instructors__c</fullName>
    <label>Number of Staff Instructors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>