force-app/main/default/objects/Application__c/fields/Number_of_Youth_Served_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Youth_Served_per_Year__c</fullName>
    <label>Number of Youth Served per Year</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>