force-app/main/default/objects/Application__c/fields/Number_Participating_in_HCHC_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_Participating_in_HCHC_Sessions__c</fullName>
    <label>Number Participating in HCHC Sessions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>