force-app/main/default/objects/Application__c/fields/Opportunity_for_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Expansion__c</fullName>
    <label>Opportunity for Expansion</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>