force-app/main/default/objects/Application__c/fields/Opportunity_for_Expansion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Expansion_Notes__c</fullName>
    <label>Opportunity for Expansion Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>