force-app/main/default/objects/Application__c/fields/Opportunity_for_Expansion_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Expansion_Score_2__c</fullName>
    <label>Opportunity for Expansion Score 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>