force-app/main/default/objects/Application__c/fields/Opportunity_for_Expansion_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_for_Expansion_Score__c</fullName>
    <label>Opportunity for Expansion Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>