force-app/main/default/objects/Application__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tribe</fullName>
                <label>Tribal Nation</label>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Designee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>