force-app/main/default/objects/Application__c/fields/Orgs_Knowledge_of_Military__c.field-meta.xml
<CustomField>
    <fullName>Orgs_Knowledge_of_Military__c</fullName>
    <label>Org&apos;s Knowledge of Military</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>