force-app/main/default/objects/Application__c/fields/Other_Costs_Budget__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_Budget__c</fullName>
    <label>Other Costs Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>