force-app/main/default/objects/Application__c/fields/Other_Costs_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_Description__c</fullName>
    <label>Other Costs Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>