force-app/main/default/objects/Application__c/fields/Other_Organizations_Supporting_Program__c.field-meta.xml
<CustomField>
    <fullName>Other_Organizations_Supporting_Program__c</fullName>
    <label>Other Organizations Supporting Program</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>