force-app/main/default/objects/Application__c/fields/Other_Successes__c.field-meta.xml
<CustomField>
    <fullName>Other_Successes__c</fullName>
    <label>Other Successes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>