force-app/main/default/objects/Application__c/fields/Other_Successes_Score__c.field-meta.xml
<CustomField>
    <fullName>Other_Successes_Score__c</fullName>
    <label>Other Successes Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>