force-app/main/default/objects/Application__c/fields/Overview_501c3__c.field-meta.xml
<CustomField>
    <fullName>Overview_501c3__c</fullName>
    <label>501(c)(3) Overview</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>