force-app/main/default/objects/Application__c/fields/PC_Same_as_FA__c.field-meta.xml
<CustomField>
    <fullName>PC_Same_as_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC Same as FA</label>
    <type>Checkbox</type>
</CustomField>