force-app/main/default/objects/Application__c/fields/PC_Same_as_GA__c.field-meta.xml
<CustomField>
    <fullName>PC_Same_as_GA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC Same as GA</label>
    <type>Checkbox</type>
</CustomField>