force-app/main/default/objects/Application__c/fields/Percent_Asian__c.field-meta.xml
<CustomField>
    <fullName>Percent_Asian__c</fullName>
    <label>Percent Asian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>