force-app/main/default/objects/Application__c/fields/Percent_Black_or_African_American__c.field-meta.xml
<CustomField>
    <fullName>Percent_Black_or_African_American__c</fullName>
    <label>Percent Black or African American</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>