force-app/main/default/objects/Application__c/fields/Percent_Eligible_Free_Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Percent_Eligible_Free_Reduced_Lunch__c</fullName>
    <label>Percent Eligible Free/Reduced Lunch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>