force-app/main/default/objects/Application__c/fields/Percent_Male__c.field-meta.xml
<CustomField>
    <fullName>Percent_Male__c</fullName>
    <label>Percent Male</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>