force-app/main/default/objects/Application__c/fields/Percent_Native_Hawaiian_Pacific_Islander__c.field-meta.xml
<CustomField>
    <fullName>Percent_Native_Hawaiian_Pacific_Islander__c</fullName>
    <label>Percent Native Hawaiian/Pacific Islander</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>